Custom format by CSS Code

--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first Website</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #D9EAFD;
+        }
+        hr {
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <img src="Spider-Man.jpg" alt="Spider-Man!!" style="width: 20%; height: auto;">
+    <hr style="border-style: dotted;">
     <h1>Peerawat Kaewchay</h1>
     <a href = "https://peerawatkaopan.wordpress.com/"> Welcome to my space </a>
     <br>
     <a href="contact.html">My contact</a>
+
+    <hr style="border-style: dotted;">
 
     <h3>My experience</h3>
     <!-- <ul>
